# dore-py

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish-to-test-pypi.yaml
src/dore/: __main__.py
src/dore/attribute/: attribute.py  attribute_container.py  attribute_container_factory.py  attribute_factory.py  attribute_value_generator.py
src/dore/attribute/config/: attribute_config.py  attribute_container_config.py  attribute_container_schema.py  attribute_definition_schema.py  attribute_properties_schema.py  attribute_reference_schema.py  attribute_schema.py  (+1 more)
src/dore/cache/: cache.py  cache_factory.py  cache_type.py
src/dore/config/: cache_config.py  cli_args.py  config_factory.py  dore_config.py  manifest_config.py  redis_config.py
src/dore/context/: context_factory.py  dore_context.py
src/dore/datastore/: datastore.py  datastore_container.py  datastore_container_factory.py  datastore_factory.py
src/dore/engine/: bootstrap.py  create_profile_filename.py  create_records_generation_count.py  engine.py  initialize_attributes.py  initialize_datastores.py  initialize_model_dependencies.py  initialize_models.py
src/dore/exceptions/: invalid_manifest_exception.py  model_conflict_exception.py
src/dore/manifest/: manifest.py  manifest_factory.py  manifest_schema.py  resolve_manifest.py
src/dore/model/: model.py  model_container.py  model_container_factory.py  model_dependency_graph.py  model_dependency_graph_factory.py  model_factory.py
src/dore/protocol/: batched_writer.py  dore_protocol.py
(+125 files in other folders)
