[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "dore"
version = "1.1.1"
description = "Schema based fake data generator"
readme = "README.md"
authors = ["Bhargav KN <bhargavkn.1996@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/bkn-dore/dore-py"
include = [
    "src/*",
]

[tool.poetry.scripts]
dore = "dore.__main__:main"

[tool.poetry.dependencies]
python = "^3.7"
progressbar2 = ">=4.0.0"
redis = ">=4.3.3"
jsonschema = ">=4.6.1"
pystache = ">=0.6.0"
PyPika = ">=0.48.9"
pymongo = ">=4.1.1"
psycopg = ">=3.0.11"
mysqlclient = ">=2.1.0"
elasticsearch7 = ">=7.17.2,<8"
elasticsearch8 = ">=8.1.2,<9"
Faker = ">=13.4.0"
